--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             <br>
             <img class="logo" src="images/Logotipo.png">
             <br>
-            <img class="direccion" src="images/Boton1.png">
-            <img class="plantasInferior" src="images/Planta1.png">
+            <div class="contenedor">
+                <img class="direccion" src="images/Boton1.png">
+                <img class="plantasInferior" src="images/Planta1.png">
+            </div>
+            
 
         </header>
         <a name="piso3"></a>
