--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <img class="logo" src="images/Logotipo.png">
             <br>
-            <div class="contenedor">
+            <div class="contenedorI">
                 <img class="direccion" src="images/Boton1.png">
                 <img class="plantasInferior" src="images/Planta1.png">
             </div>
@@ -30,7 +30,6 @@
         </header>
         <a name="piso3"></a>
         <div class="piso3">
-            <img class="imagencortada" src="images/Planta1corte.png">
             <div class="contenedor">
                 <img class="hojaSuperior" src="images/Planta3(piso1).png">
                 <h1>PISO 3</h1>
